--- a/www/style.css
+++ b/www/style.css
@@ -82,7 +82,7 @@ body{
 
 #TextInput {
     background-color: #181818a8;
-    border-color: blue;
+    border: 1px solid blue;
     box-shadow: 0 0 20px rgb(25, 0, 255),
       inset 0 0 0px rgb(25, 0, 255);
     border-radius: 8px;
@@ -94,10 +94,12 @@ body{
   .input-field {
     background-color: transparent;
     border: none;
-    width: 95%;
+    flex: 1;
+    min-width: 200px;
     outline: none;
     color: white;
     font-family: cursive;
+    font-size: 14px;
   }
   
   
